hard-gists/037e4134d8271c0de71b838a461e7ac1/run.log
=== Docker Run Log for 037e4134d8271c0de71b838a461e7ac1 ===
Started at: Mi 29. Okt 11:22:50 CET 2025

[2025-10-29 11:22:50] START: Running container for 037e4134d8271c0de71b838a461e7ac1
[2025-10-29 11:22:51] SUCCESS: Container 3bc064ce0473d26d32887f80948127b31224ba89a911f21ae616887a289590c9 started for 037e4134d8271c0de71b838a461e7ac1
=== Container logs for 037e4134d8271c0de71b838a461e7ac1 ===
  File "/snippet.py", line 30
    print u"未登陆过，需先登录"  
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 037e4134d8271c0de71b838a461e7ac1 ===
[2025-10-29 11:22:53] INFO: Container 3bc064ce0473d26d32887f80948127b31224ba89a911f21ae616887a289590c9 has stopped
